Fix some layout issues
- favicon 404
- remove height and width for body and html
- new headlines

--- a/resources/css/global.css
+++ b/resources/css/global.css
@@ -1,4 +1,4 @@
-html, body { height: 100%; margin: 15px; padding: 0;  width: 100%; }
+html, body { margin: 15px; padding: 0; }
 body { font-family: Arial; font-size: 13px; line-height: 1.5; }
 
 .formElements input,
